--- a/Resources/translations/ezrepoforms_content_type.en.yml
+++ b/Resources/translations/ezrepoforms_content_type.en.yml
@@ -1,1 +1,1 @@
-field_definition: { smilecampaigncampaign: { default_value: "Default value" }}
+field_definition: { smilecampaign: { default_value: "Default value" }}
